--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .gomoto-navbar {
-  background-color: #282931;
-  height: 90px;
+  background-color: var(--black-color);
+  padding: 20px 0;
 }
 .links a {
   font-size: 17px;
