--- a/src/components/MostPopular/MostPopular.css
+++ b/src/components/MostPopular/MostPopular.css
@@ -1,6 +1,7 @@
 .popular-text {
   font-size: 50px;
   color: var(--black-color);
+  font-family: "Heebo", sans-serif;
 }
 .popular-text span {
   color: var(--yellow-color);
@@ -15,10 +16,12 @@
 .popular-card {
   background-color: #f2efe6;
   border-radius: 20px;
-  transition: all 0.4s;
+  transition: all 0.2s;
   cursor: pointer;
+  font-family: "Heebo", sans-serif;
 }
 .popular-card:hover {
-  transform: scale(1.15);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  transform: scale(1.1);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
+  background: #fff;
 }
