implemented not found page

--- a/src/components/MostPopular/MostPopular.css
+++ b/src/components/MostPopular/MostPopular.css
@@ -7,7 +7,7 @@
   color: var(--yellow-color);
   text-decoration: underline;
 }
-.card-img {
+.card-image {
   width: 90px;
   border-radius: 50%;
   background: var(--yellow-color);
